--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "modest-abtest",
   "version": "1.0.9",
   "description": "A javascript ABTest lib running in browser",
-  "main": "dist/modest-abtest.cjs.min.js",
-  "module": "dist/modest-abtest.esm.min.js",
+  "main": "dist/modest-abtest.cjs.js",
+  "module": "dist/modest-abtest.esm.js",
   "scripts": {
     "test": "npm run build && mocha",
     "build": "rollup -c"
+  },
+  "engines": {
+    "node": "^16.14.0"
   },
   "files": [
     "dist",
@@ -23,19 +26,20 @@
   "author": "willonzxy",
   "license": "MIT",
   "homepage": "https://github.com/willonzxy/modest-abtest/tree/master#readme",
-  "dependencies": {
-    "cookie": "^0.4.1",
-    "murmurhash3js": "^3.0.1"
-  },
   "devDependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.14.4",
+    "@babel/runtime": "^7.25.4",
+    "@babel/runtime-corejs3": "^7.25.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "chai": "^4.3.4",
+    "cookie": "^0.4.1",
     "mocha": "^8.4.0",
-    "rollup": "^2.50.6",
+    "murmurhash3js": "^3.0.1",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
